update languages